[tool.poetry]  # 🎯 Use only one [tool.poetry] section
name = "research-people"
version = "0.1.0"
description = "A tool to fetch research papers from PubMed"
authors = ["Pooja M <jpoojas352@gmail.com>"]
readme = "README.md"
packages = [{ include = "pubmed_fetcher" }]  # ✅ Corrected

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
